fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
 background-color: #7487b5;
-color: hsl(255°, 255%, 255%);
+color: hsl(255, 255%, 255%);
 padding: 40px;
 text-align: center;
 }
